<resources>
    <string name="app_name">Note Keeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_vactiviy">vactiviy</string>
    <string name="edit_note_label">Edit Note</string>
    <string name="menu_next">Next</string>
    <string name="note_text">Note Text</string>
    <string name="text_note_title">Note Title</string>
    <string name="fab_button_text">TODO</string>
</resources>